# ros_ws_pc

./: avp_camRun.sh  avp_camRun.sh~  log  ros_init.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/catch_the_ball/: Catch.h  CatchRequest.h  CatchResponse.h  Game.h  GameRequest.h  GameResponse.h  Throw.h  ThrowRequest.h  ThrowResponse.h
devel/include/jpeg_viewer/: jpeg_info.h
devel/lib/avp_streamcam/: publish_avpCamStream
devel/lib/catch_the_ball/: game_server  player_node
devel/lib/jpeg_viewer/: canny_edges_viewer  jpeg_edge_detect  jpeg_rotated  jpeg_viewer
devel/lib/pkgconfig/: avp_streamcam.pc  catch_the_ball.pc  hello_world.pc  jpeg_transport.pc  jpeg_viewer.pc  radio.pc
devel/lib/radio/: radio_tx
src/: .rosinstall
src/avp_streamcam/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/avp_streamcam/launch/: avp_streamcam_raw.launch  cam_capture.launch  cam_capture.launch~  cam_display.launch  cam_display.launch~  cam_trigger.launch  cam_trigger.launch~
src/avp_streamcam/src/: .capture.cpp.swp  Display.cpp  Display.cpp~  Display.h  Display.h~  IPNC_client.cpp  IPNC_client.cpp~  avp_camera_node.cpp  avp_camera_node.cpp~  vlc.cpp  (+9 more)
src/catch_the_ball/: CMakeLists.txt  package.xml
src/catch_the_ball/include/catch_the_ball/: player.h
src/catch_the_ball/msg/: Catch.msg
src/catch_the_ball/src/: game_server.cpp  player.cpp  player_node.cpp
src/catch_the_ball/srv/: Game.srv  Throw.srv
src/jpeg_transport/: CMakeLists.txt
src/jpeg_viewer/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/radio/: CMakeLists.txt  package.xml
(+44 files in other folders)
